Fix image modal layout shift

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,12 +7,13 @@
   margin: 0;
 }
 html {
-  scrollbar-gutter: stable;
+  /* scrollbar-gutter: stable; */
+  /* width: 100dvw; */
 }
 body, html {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
-  height: 100vh;
+  height: 100dvh;
 }
 
 img,
